# clings

./: CMakeLists.txt  Kconfig  README.md  nrf7002dk_nrf5340_cpuapp.overlay  prj.conf
src/: lis2dtw12.c  lis2dtw12.h  lis2dtw12_i2c.c  lis2dtw12_spi.c  lis2dtw12_trigger.c  main.c
